--- a/src/Page/FullCat/fullCat.module.scss
+++ b/src/Page/FullCat/fullCat.module.scss
@@ -108,19 +108,19 @@
     padding-top: 0px;
   }
 }
-.buttonTitle{
-    display: flex;
-    border: 1px solid #000000;
-    border-radius: 50px;
-    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
-    padding: 10px;
-    background-color: rgb(180, 196, 196);
-    max-width: 260px;
-    @media (max-width: $lg) {
-        margin-top: 20px;
-        margin-left: 20px;
-      }
-}
+// .buttonTitle{
+//     display: flex;
+//     border: 1px solid #000000;
+//     border-radius: 50px;
+//     box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+//     padding: 10px;
+//     background-color: rgb(180, 196, 196);
+//     max-width: 260px;
+//     @media (max-width: $lg) {
+//         margin-top: 20px;
+//         margin-left: 20px;
+//       }
+// }
 
 .imgBottom{
     max-width: 40px;
@@ -138,92 +138,4 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-// .buttonHome{
-//     display: flex;
-//     border: 1px solid #000000;
-//     border-radius: 50px;
-//     box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
-//     padding: 10px;
-//     background-color: rgb(180, 196, 196);
-//     max-width: 260px;
-//     @media (max-width: $lg) {
-//         margin-top: 20px;
-//         margin-left: 20px;
-//       }
-// }
-
-// .home {
-//   max-width: 40px;
-//   height: 100%;
-// }
-// .backMenu {
-//   text-align: center;
-//   padding-top: 20px;
-//   padding-left: 10px;
-// }
-// .buttonLike{
-//     display: flex;
-//     margin-left: 200px;
-//     border: 1px solid #000000;
-//     border-radius: 50px;
-//     box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
-//     padding: 10px;
-//     background-color: rgb(180, 196, 196);
-//     max-width: 260px;
-//     @media (max-width: $xl) {
-//         margin-left: 100px;
-//       }
-//       @media (max-width: $lg) {
-//         margin-top: 20px;
-//         margin-left: 20px;
-//       }
-// }
-
-// .like {
-//   max-width: 40px;
-//   height: 100%;
-//     // padding-left: 40px;
-// }
-// .backFavorite {
-//   padding-top: 20px;
-//   padding-left: 10px;
-// }
-// .buttonCart{
-//     display: flex;
-//     margin-left: 200px;
-//     border: 1px solid #000000;
-//     border-radius: 50px;
-//     box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
-//     padding: 10px;
-//     background-color: rgb(180, 196, 196);
-//     max-width: 260px;
-//     @media (max-width: $xl) {
-//         margin-left: 100px;
-//       }
-//       @media (max-width: $lg) {
-//         margin-top: 20px;
-//         margin-left: 20px;
-//       } 
-// }
-// .cart {
-//   max-width: 40px;
-//   height: 100%;
-// //   padding-left: 40px;
-// }
-// .backCart {
-
-//   padding-top: 20px;
-//   padding-left: 10px;
-// }
 
