задебажил ошибку с onClick в cart и favoriteCats

--- a/src/components/CartBlock/CartItem/cartItem.module.scss
+++ b/src/components/CartBlock/CartItem/cartItem.module.scss
@@ -99,6 +99,10 @@
         margin-top: 20px;
       }
 }
+.clearContent:hover,
+.clearContent:active {
+  background-color: rgba(146, 10, 10, 0.2);
+}
 .clear {
   max-width: 30px;
   height: 100%;
