--- a/src/components/Custom/ButtonMenu/buttonMenu.module.scss
+++ b/src/components/Custom/ButtonMenu/buttonMenu.module.scss
@@ -17,3 +17,7 @@
             margin-left: 0px;
           }
 }
+.buttonTitle:hover,
+.buttonTitle:active {
+  background-color: rgb(152, 175, 175);
+}
