--- a/src/components/CartBlock/CartButton/сartButton.module.scss
+++ b/src/components/CartBlock/CartButton/сartButton.module.scss
@@ -18,7 +18,7 @@
 
 .button:hover,
 .button:active {
-  background-color: #2b0239;
+  background-color: #a7a5a5;
 }
 
 .icon {
@@ -39,10 +39,5 @@
   border-radius: 30px;
   text-align: center;
   font-weight: bold;
-}
-
-.button:hover .badge,
-.button:active .badge {
-  background-color: #6d0d8d;
 }
 
