--- a/src/components/Header/Profile/profile.module.scss
+++ b/src/components/Header/Profile/profile.module.scss
@@ -185,28 +185,33 @@ font-weight: bold;
 .summerBody{
     display: flex;
 }
-
-.github{
-
-}
-.hh{
-padding-left: 20px;
-}
-.habr{
-    padding-left: 20px;
-}
-
-.githubImg{
-    max-width: 50px;
+.summerImg{
+    width: 60px;
     height: 100%;
+    padding-right: 20px;
 }
 
-.hhImg{
-    max-width: 50px;
-    height: 100%;
-}
-.habrImg{
-    max-width: 50px;
-    height: 100%;
-}
+// .github{
+
+// }
+// .hh{
+// padding-left: 20px;
+// }
+// .habr{
+//     padding-left: 20px;
+// }
+
+// .githubImg{
+//     max-width: 50px;
+//     height: 100%;
+// }
+
+// .hhImg{
+//     max-width: 50px;
+//     height: 100%;
+// }
+// .habrImg{
+//     max-width: 50px;
+//     height: 100%;
+// }
 
