--- a/src/components/CartBlock/CartEmpty/cartEmpty.module.scss
+++ b/src/components/CartBlock/CartEmpty/cartEmpty.module.scss
@@ -55,32 +55,25 @@ padding-top: 40px;
         max-width: 260px;
       }
 }
-.buttonHome {
-    margin: 0 auto;
-    display: flex;
-    border: 1px solid #000000;
-    border-radius: 50px;
-    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
-    padding: 10px;
-    background-color: rgb(180, 196, 196);
-    max-width: 260px;
-    cursor: pointer;
-    margin-top: 60px;
-    @media (max-width: $lg) {
-      margin-top: 20px;
-      margin-left: 20px;
-    }
-    @media (max-width: $ssm) {
-        margin-left: 0px;
-      }
+
+.buttonBottom {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding-top: 40px;
+  padding-bottom:80px;
+  @media (max-width: $lg) {
+    display: block;
+    padding-top: 0px;
   }
-  
-  .home {
+}
+
+.imgBottom{
     max-width: 40px;
-    height: 100%;
-  }
-  .backHome {
+}
+
+.buttonSubtitle{
     text-align: center;
     padding-top: 20px;
     padding-left: 10px;
-  }
+}
