--- a/src/components/FavoriteBlock/FavoriteItem/favoriteItem.module.scss
+++ b/src/components/FavoriteBlock/FavoriteItem/favoriteItem.module.scss
@@ -82,7 +82,7 @@
 }
 
 
-.clearContent{
+.addContent{
     display: flex;
     border: 1px solid #000000;
     border-radius: 50px;
@@ -98,8 +98,8 @@
         margin-top: 20px;
       }
 }
-.clearContent:hover,
-.clearContent:active {
+.addContent:hover,
+.addContent:active {
   background-color: rgba(243, 239, 172, 0.989);
 }
 
@@ -107,9 +107,9 @@
   max-width: 30px;
   height: 100%;
 }
-.clearText {
+.addText {
   padding-top: 10px;
-  padding-right: 20px;
+  padding-left: 10px;
   white-space: nowrap;
 }
 
