--- a/src/components/Sort/sort.scss
+++ b/src/components/Sort/sort.scss
@@ -19,10 +19,8 @@
     transform: rotate(180deg);
     }
     .sort {
-    //   position: relative;
       &__label {
         display: block;
-        // align-items: center;
     
         svg {
           margin-right: 8px;
@@ -41,14 +39,11 @@
     
       &__popup {
         position: relative;
-        // right: 0;
-        // margin-top: 15px;
         background: #ffffff;
         box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
         border-radius: 10px;
         overflow: hidden;
-        // padding: 10px 0;
-        max-width: 200px;
+        max-width: 220px;
     
         ul {
           overflow: hidden;
@@ -69,57 +64,10 @@
       }
     }
     
+    .arrow{
+      width: 22px;
+      padding-top: 8px;
+      margin-left: 10px;
+    }
 
 
-
-// .sorting__cat {
-//     font-weight: bold;
-//     font-size: 18px;
-//     line-height: 22px;
-//     color: #000000;
-//     // margin: 38px 48px 38px 120px;
-//     white-space: nowrap;
-//     @media (max-width: $xl) {
-//         margin: 38px 48px 38px 20px;
-//     }
-//     @media (max-width: $lg) {
-//         margin: 306px 48px 38px 20px;
-//     }
-//     @media (max-width: $md) {
-//         font-size: 16px;
-//         line-height: 18px;
-//         margin: 210px 24px 38px 20px;
-//     }
-//     @media (max-width: $sm) {
-//         margin: 200px 0px 10px 20px;
-//     }
-// }
-
-
-
-
-
-
-  //   .catSelect {
-  //     max-width: 300px;
-  //     font-size: 18px;
-  //     line-height: 22px;
-  //     color: #000000;
-  //     background: #E5E5E5;
-  //     // margin: 30px 84px 38px 0px;
-  //     @media (max-width: $lg) {
-  //         margin: 300px 84px 38px 0px;
-  //     }
-  //     @media (max-width: $md) {
-  //         //max-width: 100px;
-  //         font-size: 16px;
-  //         line-height: 18px;
-  //         margin: 200px 42px 38px 0px;
-  //     }
-  //     @media (max-width: $sm) {
-  //         max-width: 200px;
-  //         margin: 0px 0px 10px 20px;
-  //     }
-  // }
-  
-  
