--- a/src/Page/Home/home.module.scss
+++ b/src/Page/Home/home.module.scss
@@ -1,94 +1,40 @@
 @import '../../scss/config';
 
-.background{
-    background: #E5E5E5;
+.background {
+  background: #e5e5e5;
 }
 
-.wrapper{
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 20px 20px;
+.wrapper {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 20px 20px;
 }
 
-.container{
-    display: flex;
-    padding-top: 40px ;
-    padding-bottom: 140px;
-    @media (max-width: $sm) {
-        padding-bottom: 200px;
-      }
+.container {
+  display: flex;
+  padding-top: 40px;
+  padding-bottom: 140px;
+  @media (max-width: $sm) {
+    padding-bottom: 200px;
+  }
 }
 
-
-.body{
-    display: flex;
+.body {
+  display: flex;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// .content__cat {
-//     background: #E5E5E5;
-//     position: relative;
-//     /*
-//     min-height: 100%;
-//     display: flex;
-//     flex-direction: column;
-//     */  
-// }
-// .background__cat {
-//     max-width: 1280px;
-//     margin: auto;
-// }
-
-
-
-// .head__cat {
-//     display: flex;
-//     flex-direction: row;    
-//     @media (max-width: $xl) {
-//         display: flex;
-//         flex-direction: column; 
-//     }
-//     @media (max-width: $md) {
-//        padding-top: 160px ;
-//     }
-//     @media (max-width: $sm) {
-//         padding-top: 40px ;
-//      }
-// }
-
-// .SelectCart{
-//     @media (max-width: $xl) {
-//         display: block;
-//         flex-direction: column;
-//     }
-// }
-
-
-
-
-
-
-
-
+//только из-за скелетона добьавил, треш, конеш
+.content {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  @media (max-width: $xl) {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+  @media (max-width: $lg) {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+  }
+}
