--- a/src/components/Bottom/bottom.scss
+++ b/src/components/Bottom/bottom.scss
@@ -50,7 +50,6 @@
 .bottom__email {
 }
 .bottom__email-2 {
-  border: 5px solid #00ff00;
   width: 300px;
   height: 65px;
   padding: 22px 0px 26px 33px;
@@ -76,6 +75,35 @@
     margin: 0px 0px 0px 20px;
   }
 }
+
+
+// .bottom__email_green {
+//   border: 5px solid #00ff00;
+//   width: 300px;
+//   height: 65px;
+//   padding: 22px 0px 26px 33px;
+//   border: 1px solid #a4c3ca;
+//   background: #f1f1f1;
+//   border-radius: 40px;
+//   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset, 0 1px 0 rgba(255, 255, 255, 1);
+//   font-size: 13px;
+//   line-height: 21px;
+//   color: #999999;
+//   background-color: white;
+//   margin: 80px 60px 0px 0px;
+//   @media (max-width: $xl) {
+//     width: 250px;
+//     margin: 0px 0px 0px 20px;
+//   }
+//   @media (max-width: $md) {
+//     max-width: 250px;
+//     margin: 0px 0px 0px 20px;
+//   }
+//   @media (max-width: $sm) {
+//     width: 200px;
+//     margin: 0px 0px 0px 20px;
+//   }
+// }
 
 .bottom__email_red {
   width: 300px;
