--- a/src/components/CatsBlock/skeleton.module.scss
+++ b/src/components/CatsBlock/skeleton.module.scss
@@ -1,3 +1,7 @@
+@import '../../scss/config';
 .skeleton{
     padding-right: 30px;
+    @media (max-width: $sm) {
+        padding-right: 0px;
+    }
 }
