--- a/src/components/CartBlock/CartButton/сartButton.module.scss
+++ b/src/components/CartBlock/CartButton/сartButton.module.scss
@@ -25,8 +25,7 @@
   max-width: 40px;
 }
 
-.title{
-
+.title {
   font-weight: bold;
   color: white;
   padding-top: 10px;
@@ -34,10 +33,9 @@
   padding-right: 10px;
 }
 .badge {
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
   padding: 10px 10px;
   border-radius: 30px;
   text-align: center;
   font-weight: bold;
 }
-
