--- a/src/components/CatsBlock/catBlock.scss
+++ b/src/components/CatsBlock/catBlock.scss
@@ -1,333 +1,321 @@
 @import '../../scss/config';
 
 .cards__cat {
-    display: inline-flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    border-color: #000000;
-    
-    margin: auto;
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  border-color: #000000;
+
+  margin: auto;
 }
 
 .card__cat {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
-.card{
-    margin: 0px 0px 40px 20px;
-    @media (max-width: $xl) {
-        margin:  0px 20px 27px 40px;
-    }
-    @media (max-width: $lg) {
-        margin:  0px 10px 27px 20px;
-    }
-    @media (max-width: $sm) {
-        margin:  0px 10px 27px 20px;
-    }
+.card {
+  margin: 0px 0px 40px 20px;
+  @media (max-width: $xl) {
+    margin: 0px 20px 27px 40px;
+  }
+  @media (max-width: $lg) {
+    margin: 0px 10px 27px 20px;
+  }
+  @media (max-width: $sm) {
+    margin: 0px 10px 27px 20px;
+  }
 }
-.card__img{
-    position: relative;
-    cursor: pointer;
+.card__img {
+  position: relative;
+  cursor: pointer;
 }
 .card__cat-img {
+  width: 380px;
+  height: 253px;
+  margin-bottom: 0px;
+  @media (max-width: $xl) {
+    height: 100%;
+    width: 300px;
+  }
+  @media (max-width: $lg) {
+    height: 100%;
     width: 380px;
-    height: 253px;
-    margin-bottom: 0px;
-    @media (max-width: $xl) {
-        height: 100%;
-        width: 300px;
-    }
-    @media (max-width: $lg) {
-        height: 100%;
-        width: 380px;
-    }
-    @media (max-width: $sm) {
-        height: 100%;
-        width: 250px;
-    }
-
+  }
+  @media (max-width: $sm) {
+    height: 100%;
+    width: 250px;
+  }
 }
 //Tempesto20
 .card__discount {
-    position: absolute;
+  position: absolute;
+  top: 34px;
+  left: 50px;
+  @media (max-width: $xl) {
+    top: 14px;
+    left: 30px;
+  }
+  @media (max-width: $lg) {
     top: 34px;
-    left: 50px;
-    @media (max-width: $xl) {
-        top: 14px;
-        left: 30px;
-    }
-    @media (max-width: $lg) {
-        top: 34px;
-        left: 60px;
-    }
-    @media (max-width: $sm) {
-        top: 14px;
-        left: 30px;
-    }
+    left: 60px;
+  }
+  @media (max-width: $sm) {
+    top: 14px;
+    left: 30px;
+  }
 }
 .discount {
-    font-size: 16px;
-    line-height: 20px;
-    color: #FFFFFF;
-    background: #E52D2D;
-    padding: 8px 10px;
-    border-radius: 10px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  background: #e52d2d;
+  padding: 8px 10px;
+  border-radius: 10px;
 }
 .card__like {
-    position: absolute;
-    top: 37px;
-    right: 32px;
-    @media (max-width: $xl) {
-        top: 14px;
-        right: 30px;
-    }
-    @media (max-width: $lg) {
-        top: 30px;
-        left: 310px;
-        right: 0px;
-    }
-    @media (max-width: $sm) {
-        top: 14px;
-        left: 180px;
-    }
+  position: absolute;
+  top: 37px;
+  right: 32px;
+  @media (max-width: $xl) {
+    top: 14px;
+    right: 30px;
+  }
+  @media (max-width: $lg) {
+    top: 30px;
+    left: 310px;
+    right: 0px;
+  }
+  @media (max-width: $sm) {
+    top: 14px;
+    left: 180px;
+  }
 }
 .card__like img path {
-    fill: #fff;
+  fill: #fff;
 }
 .card__background {
-    background: #F3F3F3;
-    @media (max-width: $lg) {
-        max-width: 380px;
-    }
-    @media (max-width: $sm) {
-        width: 250px;
-    }
+  background: #f3f3f3;
+  @media (max-width: $lg) {
+    max-width: 380px;
+  }
+  @media (max-width: $sm) {
+    width: 250px;
+  }
 }
 .card__title {
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 29px;
-    color: #000000;
-    white-space: nowrap;
-    padding: 29px 0px 22px 29px;
-    margin-top: 0px;
-    @media (max-width: $xl) {
-        padding: 20px 0px 16px 10px;
-    }
-    @media (max-width: $lg) {
-        padding: 20px 0px 16px 10px;
-    }
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+  white-space: nowrap;
+  padding: 29px 0px 22px 29px;
+  margin-top: 0px;
+  @media (max-width: $xl) {
+    padding: 20px 0px 16px 10px;
+  }
+  @media (max-width: $lg) {
+    padding: 20px 0px 16px 10px;
+  }
 }
-.card__cat-row{
-    display: flex;
-    flex-direction: row;
+.card__cat-row {
+  display: flex;
+  flex-direction: row;
 }
 .line {
-    margin: 0px 18px 26px 29px;
-    @media (max-width: $xl) {
-        margin: 0px 14px 20px 10px;
-    }
-    @media (max-width: $sm) {
-        margin: 0px 7px 20px 10px;
-    }
-
+  margin: 0px 18px 26px 29px;
+  @media (max-width: $xl) {
+    margin: 0px 14px 20px 10px;
+  }
+  @media (max-width: $sm) {
+    margin: 0px 7px 20px 10px;
+  }
 }
-.color__cat{
+.color__cat {
+  font-size: 12px;
+  line-height: 15px;
+  color: #000000;
+  margin: 0px 20px 0px 0px;
+  @media (max-width: $sm) {
+    margin: 0px 10px 0px 0px;
+  }
+}
+.cat_year {
+  display: flex;
+  flex-direction: column;
+}
+.years__cat {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  margin: 0px 48px 0px 0px;
+  @media (max-width: $xl) {
+    margin: 0px 24px 0px 0px;
+  }
+  @media (max-width: $sm) {
     font-size: 12px;
-    line-height: 15px;
-    color: #000000;
-    margin: 0px 20px 0px 0px;
-    @media (max-width: $sm) {
-        margin: 0px 10px 0px 0px;
-    }
+    line-height: 16px;
+  }
 }
-.cat_year{
-    display: flex;
-    flex-direction: column;
+.years__cat-1 {
+  font-size: 12px;
+  line-height: 15px;
+  color: #000000;
+  margin: 0px 12px 0px 0px;
 }
-.years__cat{
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 20px;
-    color: #000000; 
-    margin: 0px 48px 0px 0px;
-    @media (max-width: $xl) {
-        margin: 0px 24px 0px 0px;
-    }
-    @media (max-width: $sm) {
-        font-size: 12px;
-        line-height: 16px;
-    }
+.cat__quantity {
+  display: flex;
+  flex-direction: column;
 }
-.years__cat-1{
+.old__cat {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  @media (max-width: $sm) {
     font-size: 12px;
-    line-height: 15px;
-    color: #000000;
-    margin: 0px 12px 0px 0px;
+    line-height: 16px;
+  }
 }
-.cat__quantity{
-    display: flex;
-    flex-direction: column;
-}
-.old__cat{
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 20px;
-    color: #000000;
-    @media (max-width: $sm) {
-        font-size: 12px;
-        line-height: 16px;
-    }
-}
-.quantity__cat{
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 15px;
-    color: #000000;
-    white-space: nowrap;
+.quantity__cat {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #000000;
+  white-space: nowrap;
 }
 
 .price__cat {
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 29px;
-    color: #000000;
-    white-space: nowrap;
-    padding: 0px 0px 29px 29px;
-    @media (max-width: $xl) {
-        padding: 0px 0px 20px 10px;
-    }
-    @media (max-width: $lg) {
-        padding: 0px 10px 20px 10px;
-    }
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+  white-space: nowrap;
+  padding: 0px 0px 29px 29px;
+  @media (max-width: $xl) {
+    padding: 0px 0px 20px 10px;
+  }
+  @media (max-width: $lg) {
+    padding: 0px 10px 20px 10px;
+  }
 }
 //Tempesto20
 .buy__cat {
-    cursor: pointer;
-    background: #6EBBD3;
-    padding: 22px 56px 22px 56px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+  cursor: pointer;
+  background: #6ebbd3;
+  padding: 22px 56px 22px 56px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  @media (max-width: $lg) {
+    max-width: 380px;
+  }
+  @media (max-width: $sm) {
+    width: 250px;
+  }
+  & a {
+    text-decoration: none;
+    margin-left: 100px;
+    @media (max-width: $xl) {
+      margin-left: 70px;
+    }
     @media (max-width: $lg) {
-        max-width: 380px;
+      margin-left: 90px;
     }
     @media (max-width: $sm) {
-        width: 250px;
+      margin-left: 30px;
     }
-    & a{
-        text-decoration: none;
-        margin-left:100px;
-        @media (max-width: $xl) {
-            margin-left: 70px;
-        }
-        @media (max-width: $lg) {
-            margin-left: 90px;
-        }
-        @media (max-width: $sm) {
-            margin-left: 30px;
-        }
-    }
-    a:hover{
-        color: #6EBBD3;
-    }   
+  }
+  a:hover {
+    color: #6ebbd3;
+  }
 }
 
 .buy__cat.sold {
-    cursor: default;
-    position: relative;
-    margin-top: 0px ;
-    margin: auto;
+  cursor: default;
+  position: relative;
+  margin-top: 0px;
+  margin: auto;
+  width: 380px;
+  background: #1f2021;
+  @media (max-width: $xl) {
+    width: 300px;
+  }
+  @media (max-width: $lg) {
     width: 380px;
-    background: #1F2021;
-    @media (max-width: $xl){
-        width: 300px;
-    }
-    @media (max-width: $lg){
-        width: 380px;
-    } 
-    @media (max-width: $sm){
-        max-width: 250px; 
-    } 
+  }
+  @media (max-width: $sm) {
+    max-width: 250px;
+  }
 }
 
 .byu__cat-1 {
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 20px;
-    text-align: center;
-    color: #FFFFFF;
-    margin: auto;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #ffffff;
+  margin: auto;
 }
 
-
-
 .buy {
-    position: relative;
-    margin-top: 0px ;
-    margin: auto;
+  position: relative;
+  margin-top: 0px;
+  margin: auto;
+  width: 380px;
+  @media (max-width: $xl) {
+    width: 300px;
+  }
+  @media (max-width: $lg) {
     width: 380px;
-    @media (max-width: $xl){
-        width: 300px;
-    }
-    @media (max-width: $lg){
-        width: 380px;
-    } 
-    @media (max-width: $sm){
-        max-width: 250px; 
-    } 
   }
-
-  button.buy {
-    font-weight: 600;
-    color: #382b22;
-    text-transform: uppercase;
-
-    padding: 20px 40px;
-
-    background: #6EBBD3;
-    border: 2px solid #6EBBD3;
-    border-radius: 0.75em;
-    transition: transform 0.15s;
-    transform-style: preserve-3d;
+  @media (max-width: $sm) {
+    max-width: 250px;
   }
-  button.buy::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #6EBBD3;
-    border-radius: inherit;
-    box-shadow: 0 0 0 2px #6EBBD3, 0 0.625em 0 0 #0105fc;
-    transform: translate3d(0, 0.75em, -1em);
-    transition: transform 0.15s, box-shadow 0.15s;
-  }
-  
-  button.buy:hover {
-    background: #4bc9f0;
-    transform: translate(0, 0.25em);
-  }
-  button.buy:hover::before {
-    box-shadow: 0 0 0 2px #2f00ff, 0 0.5em 0 0 #5517ff;
-    transform: translate3d(0, 0.5em, -1em);
-  }
-  button.buy:active {
-    background: #6EBBD3;
-    transform: translate(0em, 0.75em);
-  }
-  button.buy:active::before {
-    box-shadow: 0 0 0 2px #0024f1, 0 0 #5517ff;
-    transform: translate3d(0, 0, -1em);
-  }
+}
 
+button.buy {
+  font-weight: 600;
+  color: #382b22;
+  text-transform: uppercase;
 
+  padding: 20px 40px;
 
+  background: #6ebbd3;
+  border: 2px solid #6ebbd3;
+  border-radius: 0.75em;
+  transition: transform 0.15s;
+  transform-style: preserve-3d;
+}
+button.buy::before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #6ebbd3;
+  border-radius: inherit;
+  box-shadow: 0 0 0 2px #6ebbd3, 0 0.625em 0 0 #0105fc;
+  transform: translate3d(0, 0.75em, -1em);
+  transition: transform 0.15s, box-shadow 0.15s;
+}
 
-
-
-
-
+button.buy:hover {
+  background: #4bc9f0;
+  transform: translate(0, 0.25em);
+}
+button.buy:hover::before {
+  box-shadow: 0 0 0 2px #2f00ff, 0 0.5em 0 0 #5517ff;
+  transform: translate3d(0, 0.5em, -1em);
+}
+button.buy:active {
+  background: #6ebbd3;
+  transform: translate(0em, 0.75em);
+}
+button.buy:active::before {
+  box-shadow: 0 0 0 2px #0024f1, 0 0 #5517ff;
+  transform: translate3d(0, 0, -1em);
+}
