--- a/src/components/Custom/ButtonMenu/buttonMenu.module.scss
+++ b/src/components/Custom/ButtonMenu/buttonMenu.module.scss
@@ -1,21 +1,21 @@
 @import '../../../scss/config';
 
-.buttonTitle{
+.buttonTitle {
   display: flex;
   border: 1px solid #000000;
   border-radius: 50px;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
   padding: 10px;
   background-color: rgb(180, 196, 196);
   max-width: 230px;
   cursor: pointer;
   @media (max-width: $lg) {
-      margin-top: 20px;
-      margin-left: 20px;
-    }
-    @media (max-width: $ssm) {
-            margin-left: 0px;
-          }
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+  @media (max-width: $ssm) {
+    margin-left: 0px;
+  }
 }
 .buttonTitle:hover,
 .buttonTitle:active {
