--- a/src/components/Bottom/bottom.scss
+++ b/src/components/Bottom/bottom.scss
@@ -48,6 +48,7 @@
   }
 }
 .bottom__email {
+  // padding-top: 20px;
 }
 .bottom__email-2 {
   width: 300px;
@@ -64,15 +65,15 @@
   margin: 80px 60px 0px 0px;
   @media (max-width: $xl) {
     width: 250px;
-    margin: 0px 0px 0px 20px;
+    margin: 20px 0px 0px 20px;
   }
   @media (max-width: $md) {
     max-width: 250px;
-    margin: 0px 0px 0px 20px;
+    margin: 20px 0px 0px 20px;
   }
   @media (max-width: $sm) {
     width: 200px;
-    margin: 0px 0px 0px 20px;
+    margin: 20px 0px 0px 20px;
   }
 }
 
@@ -119,15 +120,15 @@
   cursor: pointer;
   @media (max-width: $xl) {
     width: 250px;
-    margin: 0px 0px 0px 20px;
+    margin: 20px 0px 0px 20px;
   }
   @media (max-width: $md) {
     max-width: 250px;
-    margin: 0px 0px 0px 20px;
+    margin: 20px 0px 0px 20px;
   }
   @media (max-width: $sm) {
     width: 200px;
-    margin: 0px 0px 0px 20px;
+    margin: 20px 0px 0px 20px;
   }
 }
 
@@ -174,11 +175,11 @@
     margin: 20px 0px 0px 40px;
   }
   @media (max-width: $md) {
-    margin: 10px 0px 0px 20px;
+    margin: 20px 0px 0px 20px;
   }
   @media (max-width: $sm) {
     max-width: 200px;
-    margin: 10px 0px 0px 20px;
+    margin: 20px 0px 0px 20px;
   }
 }
 button.but {
